--- a/css/index.css
+++ b/css/index.css
@@ -113,6 +113,31 @@ article {
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.7);
 }
+.container-promo {
+  display: flex;
+}
+.promo {
+  color: white;
+  padding: 2rem 0;
+}
+.promo h3 {
+  text-align: center;
+  font-size: 2rem;
+  padding: 2rem 0;
+}
+.promo p {
+  color: white;
+  position: absolute;
+  bottom: 5%;
+  left: 5%;
+}
+.promo article {
+  flex: 1;
+  height: 300px;
+}
+.promo img {
+  width: 100%;
+}
 /* Footer */
 footer {
   margin-top: 5rem;
